# molysgaard.github.io

./: CNAME  MWeb.hs  MathDoc.hs  archive.html  cover-letter-self-driving.md  cv_latex.template.tex  generate_cover_letters_pdf.py  generate_cover_letters_pdf.sh  generate_cv_pdf.sh  index.html  mweb.cabal  posts.html  push.sh  stack.yaml
content/: archive.html  index.html  index.md
content/pages/: about-me.md.bak  autonomous-rail-landing.md  cv.md  kontrol-lang.md  mpc-compiler.md  numerical-solvers.md  projects.md  rail-rover.md  robotics-simulator.md  trajectory-optimization-toolbox.md
content/posts/: move_files.sh  rename_files.sh
cover-letters/nuro/: nuro.md
css/: default.css
files/: multicopter-trajectory-optimization-0.1.0-x86_64.AppImage
files/STIXv2/: README
files/pkg/: optimizer.d.ts  optimizer.js  optimizer_bg.wasm  optimizer_bg.wasm.d.ts  package.json  problem_description.json  problem_metadata_1.json
files/solvers/: lindefsol.h
files/videos/: multicopter-trajectory-optimization.webm  rail-rover-hello-goodbye.webm
pages/: 404.html  autonomous-rail-landing.html  cv.html  kontrol-lang.html  numerical-solvers.html  projects.html  rail-rover.html  robotics-simulator.html  trajectory-optimization-toolbox.html
posts/a-fast-massively-scalable-distributed-and-parallel-solver-for-poissons-equation/: 2013-10-20-a-fast-massively-scalable-distributed-and-parallel-solver-for-poissons-equation.html  2013-10-20-a-fast-massively-scalable-distributed-and-parallel-solver-for-poissons-equation.md
templates/: default.html  post-item.html  post.html
(+60 files in other folders)
