name:                mweb
version:             0.1.0.0
-- synopsis:            
-- description:         
-- license:             
license-file:        LICENSE
author:              Morten Lysgaard
maintainer:          morten@lysgaard.no
-- copyright:           
-- category:            
build-type:          Simple
-- extra-source-files:  
cabal-version:       >=1.10

executable mweb
  main-is:             MWeb.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       base >=4.9 && <5, pandoc >=1.19.2.1, containers >=0.5 && <0.6, pandoc-citeproc >=0.10.4.1 && <1.0, hakyll >= 4.9.5.1, filepath >= 0, array >= 0.5, regex-base >= 0.93, regex-posix >= 0.95, regex-compat >= 0.95, directory, pandoc-crossref
  -- hs-source-dirs:      
  default-language:    Haskell2010

